# anicompare

./: README.md  build_ecoli_variable_query.sh  pyproject.toml  run_chunk_compare.sh  run_ecoli_5pct_10kb.sh  run_ecoli_chunks.sh  run_ecoli_variable_10kb.sh  run_sim.sh
src/anicompare/: __init__.py  cli_build_variable_query.py  cli_generate_genome.py  cli_jaccard.py  cli_mutate_genome.py  cli_plot_results.py  cli_run_experiment.py  io.py  kmers.py  minimap2_ani.py  modimizers.py  mutate.py  plotting.py  random_genome.py  runner.py  variable_query.py
